Fix spacing under title rows in Team and Goose1.

--- a/app/bin/css/_goose1.scss
+++ b/app/bin/css/_goose1.scss
@@ -3,14 +3,14 @@ $g1TextColor: rgb(158, 158, 158);
 $g1MarginContent: 35px;
 
 #g1Backgrnd {
-    height: 700px;
+    height: 740px;
     background-image: url("http://placehold.it/1100x600");
 }
 
 #g1TitleRow {
     background: white;
     position: relative;
-    margin-top: -25px;
+    height: 35px;
 }
 
 #g1Title {
