--- a/app/bin/css/_team.scss
+++ b/app/bin/css/_team.scss
@@ -7,14 +7,16 @@
 #captainRow {
     background: white;
     position: relative;
+    height: 320px;
 }
 
 #ourTeamTitle {
     color: white;
     font-weight: 900;
+    font-size: 50px;
     text-align: center;
     position: relative;
-    top: -130px;
+    top: -160px;
 }
 
 #captainJake {
