--- a/app/bin/css/styles.css
+++ b/app/bin/css/styles.css
@@ -60,14 +60,16 @@ you see classes below that have not been explicitly defined in the modules*/
 
 #captainRow {
   background: white;
-  position: relative; }
+  position: relative;
+  height: 320px; }
 
 #ourTeamTitle {
   color: white;
   font-weight: 900;
+  font-size: 50px;
   text-align: center;
   position: relative;
-  top: -130px; }
+  top: -160px; }
 
 #captainJake {
   float: none;
@@ -86,13 +88,13 @@ you see classes below that have not been explicitly defined in the modules*/
   text-align: center; }
 
 #g1Backgrnd {
-  height: 700px;
+  height: 740px;
   background-image: url("http://placehold.it/1100x600"); }
 
 #g1TitleRow {
   background: white;
   position: relative;
-  margin-top: -25px; }
+  height: 35px; }
 
 #g1Title {
   color: white;
